--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="https://cdn.counter.dev/script.js"
+      data-id="3e3de0d7-ff13-4fbe-bf1d-3d84732fa990"
+      data-utcoffset="-3"
+    ></script>
   </body>
 </html>
